solve router jump problem && create two search components

--- a/src/styles/reset.styl
+++ b/src/styles/reset.styl
@@ -7,6 +7,8 @@ html,body,h1,h2,h3,h4,h5,h6,p,blockquote,pre,address,img,dl,dt,dd,ol,ul,li,field
   border: 0
 ul
   list-style: none
+a
+  text-decoration: none
 textarea
   font-family: sans-serif
 #app
